# MLME_SFC_13

./: .gitignore  Additional_task_2.py  README.md  deployment_checklist.txt  main.py  main_final.py  preprocessing_final.py  pyproject.toml  requirements.txt
Additional_Task_Prediction/: TASK INFORMATION.txt
Beat-the-Felix-Prediction/OUTPUTS/: metrics_summary.csv
Beat-the-Felix-Prediction/OUTPUTS/file_12738/: predictions.csv
Model_Train/: predict_narx.py  training_model.py
Model_Train/Model/: conformal_deltas.pkl  feature_scaler.pkl  kmeans_model.pkl  metadata.json
Model_Train/Model/Additional_Task_Prediction/: metrics_summary.csv  timing_summary.csv
Model_Train/Model/clustering_analysis/: clustering_analysis_report.json
Model_Train/Model/data_visualization/: data_quality_report.json  outlier_analysis.json  statistical_summary.json
Model_Train/Model/narx/: scaler_X_0.pkl  scaler_X_1.pkl  scaler_Y_0.pkl  scaler_Y_1.pkl
Model_Train/Model/qr/: T_PM_0.1.keras  T_PM_0.9.keras  T_TM_0.1.keras  T_TM_0.9.keras  c_0.1.keras  c_0.9.keras  d10_0.1.keras  d10_0.9.keras  d50_0.1.keras  d50_0.9.keras  d90_0.1.keras  d90_0.9.keras
Model_Train/NARX_Prediction/prediction_results_20250718_112948/: overall_metrics_20250718_112948.csv  summary_statistics_20250718_112948.csv
NARX_Prediction/prediction_results_20250718_112948/: cluster_distribution_20250718_112948.csv  column_metrics_20250718_112948.csv
