[project]
name = "mlme-sfc-13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.1.3",
    "pandas==2.3.1",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "tqdm==4.67.1",
]
